[package]
name = "zero_to_prod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "zero_to_prod"

[dependencies]
actix-web = "4.0.1"
tokio = {version = "1.18.2", features = ["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.11"
