[package]
name = "zero_to_prod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "zero_to_prod"

[dependencies]
config = "0.11.0"
actix-web = "4.0.1"
serde = { version = "1.0.137", features = ["derive"] }
tokio = {version = "1.18.2", features = ["macros", "rt-multi-thread"]}

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
